--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -170,9 +170,9 @@
 
 		<div class="details-section">
 			<div class="row">
-				<div class="col-md-10">
+				<div class="col-md-12">
 					<div class="row">
-						<div class="col-md-4">
+						<div class="col-md-5">
 							<h3 class="text-center">Tables</h3>	
 							<div class="table-main">
 
@@ -209,7 +209,7 @@
 							</div>
 						</div>
 
-						<div class="col-md-4">
+						<div class="col-md-5">
 							<h3 class="text-center">Orders</h3>	
 							<div class="current-Order"><h4>Current Table : <strong> {{currentTable}}</strong></h4></div>
 							<div class="table-main">
@@ -244,7 +244,7 @@
 													</div>
 													<div class="col-sm-4">
 
-														<div class=" cancel-order">Cancel Order</div>
+														<div class=" cancel-order" ng-click="">Cancel Order</div>
 
 													</div>
 
